# rtctrl

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
apps/: CMakeLists.txt  dxl_emu.cpp  dxl_inspect.cpp  ident_common.hpp  latency_verifier.hpp  session_watchdog.hpp  track_common.hpp  two_mass_arm.hpp  x7_common.hpp  x7_float.cpp  x7_ident.cpp  x7_ident_sim.cpp  x7_move_simple.cpp  x7_onoff.cpp  x7_read.cpp  x7_set_param.cpp  x7_track.cpp  x7_track_sim.cpp
cmake/: FindMiLib.cmake
config/: crane_x7.toml
config/postures/: p1.json  p2.json
docs/: HARDWARE_BRINGUP.md  IDENTIFICATION_CAMPAIGN.md  IDENTIFICATION_PLAN.md  IDENTIFICATION_PROTOCOL.md  IMPLEMENTATION_PLAN.md  PARITY.md  PLAN.md  README.md  REMEDIATION_PLAN.md
docs/guide/: architecture.md  getting-started.md  overview.md  usage.md
docs/javascripts/: mathjax.js
docs/theory/: computed-torque.md  dynamics-foundations.md  gravity-compensation.md
examples/: CMakeLists.txt  make_motion.cpp  x7_wave.cpp
include/rtctrl/: version.hpp
include/rtctrl/arm/: arm.hpp  computed_torque.hpp  crane_x7_tuning.hpp  gravity_comp.hpp  real_arm.hpp  runner.hpp  sim_arm.hpp  types.hpp
include/rtctrl/dxl/: control_table.hpp  conversions.hpp  error.hpp  packet_io.hpp  port.hpp  sync_group.hpp
include/rtctrl/emu/: fake_packet_io.hpp  motor_emulator.hpp  pty_bus.hpp
include/rtctrl/hw/: config.hpp  crane_x7.hpp
include/rtctrl/model/: chain_model.hpp  ik_solver.hpp  joint_map.hpp  trajectory.hpp  zvector.hpp  zvs_writer.hpp
models/crane_x7/: contactinfo.ztk  crane_x7.ztk
src/: milib_cpp_compat.cpp  version.cpp
src/arm/: real_arm.cpp  sim_arm.cpp
src/dxl/: port.cpp  sync_group.cpp
src/emu/: fake_packet_io.cpp  motor_emulator.cpp  pty_bus.cpp
src/hw/: config.cpp  crane_x7.cpp
src/model/: chain_model.cpp  ik_solver.cpp  joint_map.cpp  trajectory.cpp  zvs_writer.cpp
tests/: CMakeLists.txt
tests/integration/: gravity_sim_test.cpp  ident_sim_test.cpp  pty_test.cpp  quiesce_pty_test.cpp  sim_arm_test.cpp  thread_test.cpp  tracking_sim_test.cpp
tests/unit/: computed_torque_test.cpp  dxl_test.cpp  gravity_test.cpp  hw_modes_test.cpp  hw_test.cpp  ident_common_test.cpp  ik_test.cpp  model_test.cpp  runner_test.cpp  session_watchdog_test.cpp  smoke_test.cpp  track_common_test.cpp  trajectory_test.cpp  two_mass_arm_test.cpp
tools/: bootstrap_milib.sh  crane_x7_motor.patch.ztk  ident_analysis.py  port_model.py  pyproject.toml
tools/milib_config/: roki-gl.conf  zx11.conf
